--- a/dz_1_mate/css/style.css
+++ b/dz_1_mate/css/style.css
@@ -9,8 +9,6 @@ header {
     width: 100%;
     height: 1000px;
     background: url(../img/eagle.jpg) no-repeat;
-
-
 }
 
 .shadow {
@@ -57,7 +55,6 @@ header {
     width: 850px;
     margin: 0px auto;
     text-align: center;
-
 }
 
 .intro p {
@@ -67,7 +64,6 @@ header {
     position: relative;
     margin-top: 150px;
     margin-bottom: 60px;
-
 }
 
 .intro h1 {
@@ -79,8 +75,6 @@ header {
     text-transform: uppercase;
     line-height: 145px;
     margin-bottom: 75px;
-
-
 }
 
 .intro hr {
@@ -90,7 +84,6 @@ header {
     height: 3px;
     width: 60px;
     margin: 0 auto;
-
 }
 
 .intro input[type="submit"] {
@@ -104,8 +97,6 @@ header {
     padding-bottom: 10px;
     margin-top: 50px;
     color: white;
-    
-
 }
 
 .bottom li {
@@ -115,7 +106,7 @@ header {
     width: 200px;
     margin-right: 150px;
     padding-top: 20px;
-    
+
 }
 
 .bottom li a {
@@ -165,7 +156,7 @@ header {
     font-size: 24px;
     margin-top: 90px;
     margin-bottom: 24px;
-    
+
 }
 
 .caption p {
@@ -173,7 +164,7 @@ header {
     color: #999999;
     margin-top: 50px;
     margin-bottom: 100px;
-    
+
 }
 
 .caption hr {
@@ -189,22 +180,17 @@ header {
     margin: 0 auto;
 }
 
-
-
 .photo img {
-    object-fit: cover;
-    width: 380px;
-    height: 250px;
     margin-right: 30px;
     margin-bottom: 110px;
 }
 
 .photo img:hover {
-    box-shadow: 10px 10px 0px 0px rgba(149,225,211,1); 
+    box-shadow: 10px 10px 0px 0px rgba(149, 225, 211, 1);
 }
 
 .statistics {
- 
+
     width: 100%;
     height: 270px;
     background-color: #95e1d3;
@@ -214,7 +200,7 @@ header {
     width: 1200px;
     text-align: center;
     margin: 0 auto;
-    
+
 }
 
 .part {
@@ -222,12 +208,12 @@ header {
     display: inline-block;
     text-align: center;
     border-left: 1px solid white;
-   
-    
+
+
 }
 
 .part:last-child {
-     border-right: 1px solid white;
+    border-right: 1px solid white;
 }
 
 .part h2 {
@@ -238,7 +224,7 @@ header {
     margin-top: 80px;
     padding-right: 70px;
     padding-left: 70px;
-    
+
 }
 
 .part p {
@@ -256,7 +242,7 @@ header {
 .skills {
     width: 100%;
     margin-top: 60px;
-    
+
 }
 
 .row-top {
@@ -270,7 +256,7 @@ header {
     margin: 0 auto;
     padding-top: 45px;
     border-top: 1px solid #e5e5e5;
-    
+
 }
 
 .row-bottom p {
@@ -282,7 +268,7 @@ header {
     display: inline-block;
     width: 300px;
     padding-right: 80px;
-   
+
 }
 
 
@@ -317,15 +303,3 @@ header {
 }
 
 .devices
-
-
-
-
-
-
-
-
-
-
-
-
